增加主题滑动的组件

--- a/main/app.json
+++ b/main/app.json
@@ -13,6 +13,7 @@
   "sitemapLocation": "sitemap.json",
   "usingComponents": {
     "l-grid": "./miniprogram_npm/lin-ui/grid/index",
-    "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index"
+    "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
+    "l-price": "/miniprogram_npm/lin-ui/price/index"
   }
 }
