增加瀑布流

--- a/main/app.json
+++ b/main/app.json
@@ -14,6 +14,7 @@
   "usingComponents": {
     "l-grid": "./miniprogram_npm/lin-ui/grid/index",
     "l-grid-item": "/miniprogram_npm/lin-ui/grid-item/index",
-    "l-price": "/miniprogram_npm/lin-ui/price/index"
+    "l-price": "/miniprogram_npm/lin-ui/price/index",
+    "s-spu-preview": "/components/spu-preview/index"
   }
 }
