增加排列组合函数

--- a/main/project.private.config.json
+++ b/main/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -11,6 +12,12 @@
     },
     "miniprogram": {
       "list": [
+        {
+          "name": "pages/detail/detail",
+          "pathName": "pages/detail/detail",
+          "query": "pid=2",
+          "scene": null
+        },
         {
           "name": "pages/detail/detail",
           "pathName": "pages/detail/detail",
