增加无规格逻辑

--- a/main/project.private.config.json
+++ b/main/project.private.config.json
@@ -21,7 +21,13 @@
         {
           "name": "pages/detail/detail",
           "pathName": "pages/detail/detail",
-          "query": "pid=2",
+          "query": "pid=12",
+          "scene": null
+        },
+        {
+          "name": "pages/detail/detail",
+          "pathName": "pages/detail/detail",
+          "query": "pid=12",
           "scene": null
         }
       ]
