增加详情的部分内容和分享

--- a/main/app.json
+++ b/main/app.json
@@ -9,7 +9,8 @@
     "pages/my/index",
     "pages/cart/cart",
     "pages/category/category",
-    "pages/my/my"
+    "pages/my/my",
+    "components/spu-description/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
