--- a/main/project.private.config.json
+++ b/main/project.private.config.json
@@ -29,6 +29,12 @@
           "pathName": "pages/detail/detail",
           "query": "pid=12",
           "scene": null
+        },
+        {
+          "name": "pages/category/category",
+          "pathName": "pages/category/category",
+          "query": "",
+          "scene": null
         }
       ]
     }
