添加基本的search页面的结构

--- a/main/project.private.config.json
+++ b/main/project.private.config.json
@@ -35,6 +35,12 @@
           "pathName": "pages/category/category",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/search/search",
+          "pathName": "pages/search/search",
+          "query": "",
+          "scene": null
         }
       ]
     }
